log
Wed Oct 21 19:00:20 UTC 2020: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:10: error: ‘H’ is used uninitialized in this function [-Werror=uninitialized]
   H->size=0;
   ~~~~~~~^~
heap.c:40:15: error: ‘arreglo’ is used uninitialized in this function [-Werror=uninitialized]
   H->heapArray=arreglo;
   ~~~~~~~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 21 19:00:53 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:10: error: ‘H’ is used uninitialized in this function [-Werror=uninitialized]
   H->size=0;
   ~~~~~~~^~
heap.c:40:15: error: ‘arreglo’ is used uninitialized in this function [-Werror=uninitialized]
   H->heapArray=arreglo;
   ~~~~~~~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 21 19:01:33 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:10: error: ‘H’ is used uninitialized in this function [-Werror=uninitialized]
   H->size=0;
   ~~~~~~~^~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 21 19:01:39 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:38:11: error: ‘H’ is used uninitialized in this function [-Werror=uninitialized]
   H->capac=3;
   ~~~~~~~~^~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 21 19:06:30 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
c717b33
Wed Oct 21 19:13:16 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
e9ffea6
